cleanup: reuse MY_CHECK_AND_SET_COMPILER_FLAG in sphinx/CMakeLists.txt

--- a/storage/sphinx/CMakeLists.txt
+++ b/storage/sphinx/CMakeLists.txt
@@ -2,10 +2,7 @@ INCLUDE(CheckCCompilerFlag)
 
 ADD_DEFINITIONS(-DMYSQL_SERVER)
 
-CHECK_C_COMPILER_FLAG("-Wno-write-strings" WNO_WRITE_STRING)
-IF(WNO_WRITE_STRING)
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-write-strings")
-ENDIF()
+MY_CHECK_AND_SET_COMPILER_FLAG("-Wno-write-strings")
 
 IF(MSVC)
   LINK_LIBRARIES(ws2_32)
