disable mroonga temporarily: see MDEV-7246

--- a/storage/mroonga/CMakeLists.txt
+++ b/storage/mroonga/CMakeLists.txt
@@ -240,16 +240,12 @@ link_directories(
 
 if(MRN_BUNDLED)
   if(GROONGA_NORMALIZER_MYSQL_FOUND AND MRN_GROONGA_BUNDLED)
-    mysql_add_plugin(mroonga
-      "${MROONGA_SOURCES};${MRN_UDF_SOURCES};${MRN_GRN_NORMALIZER_MYSQL_SOURCES};${LIBMRN_NEED_MYSQL_SOURCES};${LIBMRN_NO_MYSQL_SOURCES}"
-      STORAGE_ENGINE MODULE_ONLY
-      LINK_LIBRARIES ${GROONGA_LIBRARIES})
+    set(sources "${MROONGA_SOURCES};${MRN_UDF_SOURCES};${MRN_GRN_NORMALIZER_MYSQL_SOURCES};${LIBMRN_NEED_MYSQL_SOURCES};${LIBMRN_NO_MYSQL_SOURCES}")
   else()
-    mysql_add_plugin(mroonga
-      "${MROONGA_SOURCES};${MRN_UDF_SOURCES};${LIBMRN_NEED_MYSQL_SOURCES};${LIBMRN_NO_MYSQL_SOURCES}"
-      STORAGE_ENGINE MODULE_ONLY
-      LINK_LIBRARIES ${GROONGA_LIBRARIES})
+    set(sources "${MROONGA_SOURCES};${MRN_UDF_SOURCES};${LIBMRN_NEED_MYSQL_SOURCES};${LIBMRN_NO_MYSQL_SOURCES}")
   endif()
+  mysql_add_plugin(mroonga ${sources} STORAGE_ENGINE MODULE_ONLY LINK_LIBRARIES ${GROONGA_LIBRARIES}
+    DISABLED)
  else()
 else()
   add_library(mroonga MODULE
