Test changes (backported from 10.1).

--- a/mysql-test/suite/wsrep/my.cnf
+++ b/mysql-test/suite/wsrep/my.cnf
@@ -2,7 +2,8 @@
 !include include/default_mysqld.cnf
 
 [mysqld.1]
-
-[ENV]
-GALERA_BASE_PORT=@mysqld.1.#galera_port
+#galera_port=@OPT.port
+#ist_port=@OPT.port
+#sst_port=@OPT.port
+wsrep_provider_options='base_port=@mysqld.1.#galera_port'
 
