--- a/mysql-test/suite/galera/galera_2nodes.cnf
+++ b/mysql-test/suite/galera/galera_2nodes.cnf
@@ -1,23 +1,31 @@
 # Use default setting for mysqld processes
 !include include/default_mysqld.cnf
 
-[mysqld.1]
+[mysqld]
 binlog-format=row
-wsrep_provider=@ENV.WSREP_PROVIDER
-wsrep_cluster_address='gcomm://'
+innodb-autoinc-lock-mode=2
+default-storage-engine=innodb
+
+wsrep-cluster-address=gcomm://
+wsrep-provider=@ENV.WSREP_PROVIDER
+# enforce read-committed characteristics across the cluster
+wsrep-causal-reads=ON
+wsrep-sync-wait=7
+
+[mysqld.1]
+#galera_port=@OPT.port
+#ist_port=@OPT.port
+#sst_port=@OPT.port
 wsrep_provider_options='base_port=@mysqld.1.#galera_port'
 wsrep_sst_receive_address='127.0.0.1:@mysqld.1.#sst_port'
-# enforce read-committed characteristics across the cluster
-wsrep_causal_reads=ON
 
 [mysqld.2]
-binlog-format=row
-wsrep_provider=@ENV.WSREP_PROVIDER
+#galera_port=@OPT.port
+#ist_port=@OPT.port
+#sst_port=@OPT.port
 wsrep_cluster_address='gcomm://127.0.0.1:@mysqld.1.#galera_port'
 wsrep_provider_options='base_port=@mysqld.2.#galera_port'
 wsrep_sst_receive_address='127.0.0.1:@mysqld.2.#sst_port'
-# enforce read-committed characteristics across the cluster
-wsrep_causal_reads=ON
 
 [ENV]
 NODE_MYPORT_1= @mysqld.1.port
