- Begin eliminating on Linux OverloadedVirtual warnings.   However some tests failed. Going to windows to try tracing them. modified:   storage/connect/CMakeLists.txt   storage/connect/array.h   storage/connect/json.h   storage/connect/tabdos.h   storage/connect/tabjson.h   storage/connect/taboccur.cpp   storage/connect/tabpivot.h   storage/connect/tabutil.h   storage/connect/tabxcl.h   storage/connect/valblk.h   storage/connect/xindex.h

--- a/storage/connect/CMakeLists.txt
+++ b/storage/connect/CMakeLists.txt
@@ -50,7 +50,7 @@ IF(UNIX)
     add_definitions(-Wall -Wextra -Wmissing-declarations)
     message(STATUS "CONNECT: GCC: All warnings enabled")
   else()
-    add_definitions(-Wall -Wmissing-declarations)
+    add_definitions(-Wall -Wmissing-declarations -Woverloaded-virtual)
     add_definitions(-Wno-write-strings)
     add_definitions(-Wno-unused-variable)
     # Bar: -Wno-unused-but-set-variables commented (does not present on sol10)
