--- a/.bzrignore
+++ b/.bzrignore
@@ -1204,3 +1204,9 @@ scripts/mysql_config.pl
 pcre/pcre_chartables.c
 pcre/test*grep
 import_executables.cmake
+storage/tokudb/ft-index/ft/ftverify
+storage/tokudb/ft-index/ft/tdb-recover
+storage/tokudb/ft-index/ft/tdb_logprint
+storage/tokudb/ft-index/ft/tokuftdump
+storage/tokudb/ft-index/tools/tokudb_gen
+storage/tokudb/ft-index/tools/tokudb_load
