MDEV-7531 Update 10.0.15 to 10.0.16 -> Error 2003 (HY000) can't connect to MySql server.
use the old registry branch, even if we changed the "manufacturer" string

--- a/win/packaging/extra.wxs.in
+++ b/win/packaging/extra.wxs.in
@@ -460,7 +460,7 @@
       <!-- Data directory with some reasonable security settings -->
       <Component Id="C.datadir" Guid="*" Directory="DATADIR">
         <RegistryValue Root='HKLM'
-           Key='SOFTWARE\@MANUFACTURER@\@CPACK_WIX_PACKAGE_NAME@'
+           Key='SOFTWARE\Monty Program AB\@CPACK_WIX_PACKAGE_NAME@'
            Name='DATADIR' Value='[DATADIR]' Type='string' KeyPath='yes'/>
         <CreateFolder>
           <util:PermissionEx User="[LogonUser]" GenericAll="yes" />
@@ -472,7 +472,7 @@
       <Component Id="C.service" Guid="*" Directory="DATADIR">
         <Condition>SERVICENAME</Condition>
         <RegistryValue Root='HKLM'
-           Key='SOFTWARE\@MANUFACTURER@\@CPACK_WIX_PACKAGE_NAME@'
+           Key='SOFTWARE\Monty Program AB\@CPACK_WIX_PACKAGE_NAME@'
            Name='SERVICENAME' Value='[SERVICENAME]' Type='string' KeyPath='yes'/>
         <ServiceControl Id='DBInstanceServiceStop' Name='[SERVICENAME]'  Stop='both' Remove='uninstall' Wait='yes'/>
         <ServiceControl Id='DBInstanceServiceStart' Name='[SERVICENAME]' Start='install' Wait='yes'/>
@@ -481,7 +481,7 @@
       <Component Id="C.myiniconfig" Guid="*" Directory="DATADIR">
       <Condition>STDCONFIG</Condition>
         <RegistryValue Root='HKLM'
-           Key='SOFTWARE\@MANUFACTURER@\@CPACK_WIX_PACKAGE_NAME@'
+           Key='SOFTWARE\Monty Program AB\@CPACK_WIX_PACKAGE_NAME@'
            Name='STDCONFIG' Value='1' Type='string' KeyPath='yes'/>
         <IniFile Id="Ini1"
             Action="createLine"
@@ -517,7 +517,7 @@
       <Component Id="C.feedback" Guid="*" Directory="DATADIR">
         <Condition>FEEDBACK</Condition>
         <RegistryValue Root='HKLM'
-           Key='SOFTWARE\@MANUFACTURER@\@CPACK_WIX_PACKAGE_NAME@'
+           Key='SOFTWARE\Monty Program AB\@CPACK_WIX_PACKAGE_NAME@'
            Name='FEEDBACK' Value='1' Type='string' KeyPath='yes'/>
         <IniFile Id="Ini5"
             Action="createLine"
@@ -531,7 +531,7 @@
       <Component Id="C.utf8" Guid="*" Directory="DATADIR">
         <Condition>UTF8</Condition>
         <RegistryValue Root='HKLM'
-           Key='SOFTWARE\@MANUFACTURER@\@CPACK_WIX_PACKAGE_NAME@'
+           Key='SOFTWARE\Monty Program AB\@CPACK_WIX_PACKAGE_NAME@'
            Name='UTF8' Value='1' Type='string' KeyPath='yes'/>
         <IniFile Id="Ini6"
             Action="createLine"
@@ -546,7 +546,7 @@
       <Component Id="C.serviceaccount.permission" Guid="*" Directory='DATADIR' Transitive='yes'>
         <Condition><![CDATA[SERVICENAME AND (VersionNT > 600)]]></Condition>
         <RegistryValue Root='HKLM'
-             Key='SOFTWARE\@MANUFACTURER@\@CPACK_WIX_PACKAGE_NAME@'
+             Key='SOFTWARE\Monty Program AB\@CPACK_WIX_PACKAGE_NAME@'
              Name='servicepermission' Value='1' Type='string' KeyPath='yes'/>
         <CreateFolder>
           <util:PermissionEx User="NT SERVICE\[SERVICENAME]" GenericAll="yes" />
@@ -785,7 +785,7 @@
 
     <Feature Id='StoreInstallLocation' Level='1' Absent='disallow' Display='hidden'>
       <Component Directory='INSTALLDIR' Guid='*' Id='C.storeinstalllocation'>
-        <RegistryValue Root='HKLM' Key='SOFTWARE\@MANUFACTURER@\@CPACK_WIX_PACKAGE_NAME@' 
+        <RegistryValue Root='HKLM' Key='SOFTWARE\Monty Program AB\@CPACK_WIX_PACKAGE_NAME@' 
                        Name='INSTALLDIR' Value='[INSTALLDIR]' Type='string'  KeyPath='yes'/>
       </Component>
     </Feature>
@@ -794,7 +794,7 @@
 
     <Property Id='$(var.STOREDVAR)' Secure='yes'>
       <RegistrySearch Id='$(var.STOREDVAR)Property' Root='HKLM'
-                      Key='SOFTWARE\@MANUFACTURER@\@CPACK_WIX_PACKAGE_NAME@'
+                      Key='SOFTWARE\Monty Program AB\@CPACK_WIX_PACKAGE_NAME@'
                       Name='$(var.STOREDVAR)' Type='raw' />
     </Property>
     <CustomAction Id='SaveCmdLineValue_$(var.STOREDVAR)' Property='CMDLINE_$(var.STOREDVAR)'
