--- a/plugin/file_key_management_plugin/CMakeLists.txt
+++ b/plugin/file_key_management_plugin/CMakeLists.txt
@@ -1,4 +1,8 @@
 SET(FILE_KEY_MANAGEMENT_PLUGIN_SOURCES file_key_management_plugin.cc EncKeys.cc KeySingleton.cc)
 
+IF(NOT SSL_SOURCES)
+  SET(USING_OPENSSL ON)
+ENDIF()
+
 MYSQL_ADD_PLUGIN(FILE_KEY_MANAGEMENT_PLUGIN ${FILE_KEY_MANAGEMENT_PLUGIN_SOURCES}
-                 LINK_LIBRARIES pcre)
+  LINK_LIBRARIES pcre ONLY_IF USING_OPENSSL)
