--- a/plugin/cracklib_password_check/CMakeLists.txt
+++ b/plugin/cracklib_password_check/CMakeLists.txt
@@ -3,9 +3,8 @@ INCLUDE (CheckLibraryExists)
 
 CHECK_INCLUDE_FILES (crack.h HAVE_CRACK_H)
 CHECK_LIBRARY_EXISTS(crack FascistCheckUser "" HAVE_LIBCRACK)
-IF (HAVE_ALLOCA_H AND HAVE_CRACK_H AND HAVE_LIBCRACK AND HAVE_MEMCPY)
-  SET(ok 1)
-ENDIF()
 
-MYSQL_ADD_PLUGIN(cracklib_password_check cracklib_password_check.c
-  LINK_LIBRARIES crack ONLY_IF ok MODULE_ONLY)
+IF (HAVE_ALLOCA_H AND HAVE_CRACK_H AND HAVE_LIBCRACK AND HAVE_MEMCPY)
+  MYSQL_ADD_PLUGIN(cracklib_password_check cracklib_password_check.c
+                   LINK_LIBRARIES crack MODULE_ONLY)
+ENDIF()
