--- a/storage/xtradb/CMakeLists.txt
+++ b/storage/xtradb/CMakeLists.txt
@@ -458,12 +458,10 @@ SET(INNOBASE_SOURCES
 	ut/ut0wqueue.cc
 	ut/ut0timer.cc)
 
-IF(NOT XTRADB_OK)
+IF(XTRADB_OK)
+  MYSQL_ADD_PLUGIN(xtradb ${INNOBASE_SOURCES} STORAGE_ENGINE
+                   DEFAULT RECOMPILE_FOR_EMBEDDED
+                   LINK_LIBRARIES ${ZLIB_LIBRARY} ${LINKER_SCRIPT})
+ELSE()
   MESSAGE(FATAL_ERROR "Percona XtraDB is not supported on this platform")
 ENDIF()
-
-MYSQL_ADD_PLUGIN(xtradb ${INNOBASE_SOURCES} STORAGE_ENGINE
-  DEFAULT ONLY_IF XTRADB_OK
-  RECOMPILE_FOR_EMBEDDED
-  LINK_LIBRARIES ${ZLIB_LIBRARY} ${LINKER_SCRIPT})
-
