MY_CHECK_AND_SET_COMPILER_FLAG changes
* watch for "redefined macro" warning
* don't enable -D_FORTIFY_SOURCE=2 in debug builds (it requires -O)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -206,13 +206,7 @@ IF(SECURITY_HARDENED)
   MY_CHECK_AND_SET_COMPILER_FLAG("-pie -fPIC")
   MY_CHECK_AND_SET_COMPILER_FLAG("-Wl,-z,relro,-z,now")
   MY_CHECK_AND_SET_COMPILER_FLAG("-fstack-protector --param=ssp-buffer-size=4")
-
-  # sometimes _FORTIFY_SOURCE is predefined
-  INCLUDE(CheckSymbolExists)
-  CHECK_SYMBOL_EXISTS(_FORTIFY_SOURCE "" HAVE_FORTIFY_SOURCE)
-  IF(NOT HAVE_FORTIFY_SOURCE)
-    ADD_DEFINITIONS(-D_FORTIFY_SOURCE=2)
-  ENDIF()
+  MY_CHECK_AND_SET_COMPILER_FLAG("-D_FORTIFY_SOURCE=2" RELEASE RELWITHDEBINFO)
 ENDIF()
 
 OPTION(ENABLE_DEBUG_SYNC "Enable debug sync (debug builds only)" ON) 
