- Fix a bug that caused a crash when doing delete on a json table with wrong syntax file
- Suppress MYSQL_SUPPORT preprocessor variable

--- a/.gitignore
+++ b/.gitignore
@@ -293,6 +293,7 @@ storage/mroonga/vendor/groonga/src/suggest/groonga-suggest-create-dataset
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
+[Rr]eleaseWithDebInfo/
 x64/
 x86/
 build/
