Refs codership/mysql-wsrep#33
  1. factored XID-related functions to a separate wsrep_xid.cc unit.
  2. refactored them to take refrences instead of pointers where appropriate
  3. implemented wsrep_get/set_SE_position to take wsrep_uuid_t and wsrep_seqno_t instead of XID
  4. call wsrep_set_SE_position() in wsrep_sst_received() to reinitialize SE checkpoint after SST was received, avoid assert() in setting code by first checking current position.

--- a/sql/CMakeLists.txt
+++ b/sql/CMakeLists.txt
@@ -44,12 +44,13 @@ ENDIF()
 
 IF(WITH_WSREP)
  SET(WSREP_SOURCES
+   wsrep_utils.cc
+   wsrep_xid.cc
    wsrep_check_opts.cc
    wsrep_hton.cc
    wsrep_mysqld.cc 
    wsrep_notify.cc
    wsrep_sst.cc
-   wsrep_utils.cc
    wsrep_var.cc
    wsrep_binlog.cc
    wsrep_applier.cc
