encryption cleanup: small changes
* comments
* move my_bytes_to_key() and my_aes_hex2uint() into file_key_management_plugin
* rename HA_INSERT_ORDER -> HA_PRESERVE_INSERT_ORDER
* remove unused variables and declarations
* fix casts
* don't link innodb with pcre
* remove redundant entries from aria's TARGET_LINK_LIBRARIES

--- a/storage/maria/CMakeLists.txt
+++ b/storage/maria/CMakeLists.txt
@@ -64,7 +64,7 @@ IF(NOT WITH_ARIA_STORAGE_ENGINE)
 ENDIF()
 
 TARGET_LINK_LIBRARIES(aria myisam
-  mysys mysys_ssl ${LIBCRYPT} ${LIBDL} ${SSL_LIBRARIES})
+  mysys mysys_ssl)
 
 MYSQL_ADD_EXECUTABLE(aria_ftdump maria_ftdump.c COMPONENT Server)
 TARGET_LINK_LIBRARIES(aria_ftdump aria)
