--- a/storage/tokudb/ft-index/ft/CMakeLists.txt
+++ b/storage/tokudb/ft-index/ft/CMakeLists.txt
@@ -84,7 +84,7 @@ maybe_add_gcov_to_libraries(ft ft_static)
 ## depend on other generated targets
 add_dependencies(ft install_tdb_h generate_log_code build_lzma)
 add_dependencies(ft_static install_tdb_h generate_log_code build_lzma)
-
+## fix for mdev-7799
 ## link with lzma (which should be static) and link dependers with zlib
 target_link_libraries(ft LINK_PRIVATE util_static lzma ${LIBTOKUPORTABILITY})
 target_link_libraries(ft LINK_PUBLIC z)
