spelling: parallell -> parallel
The parallelizm of 'l's in the word "parallel" has exceeded the english
language specification.

Comments only are affected. storage/ndb had too much parallell in code
to consider fixing.

--- a/mysql-test/std_data/ndb_config_config.ini
+++ b/mysql-test/std_data/ndb_config_config.ini
@@ -21,7 +21,7 @@ InitialNoOfOpenFiles= 27
  
 # 
 # Increase timeouts to cater for slow test-machines 
-#   (possibly running several tests in parallell) 
+#   (possibly running several tests in parallel) 
 # 
 HeartbeatIntervalDbDb= 30000 
 HeartbeatIntervalDbApi= 30000 
