--- a/mysql-test/lib/v1/ndb_config_1_node.ini
+++ b/mysql-test/lib/v1/ndb_config_1_node.ini
@@ -16,7 +16,7 @@ DiskPageBufferMemory= CHOOSE_DiskPageBufferMemory
 
 #
 # Increase timeouts to cater for slow test-machines
-#   (possibly running several tests in parallell)
+#   (possibly running several tests in parallel)
 #
 HeartbeatIntervalDbDb= 30000
 HeartbeatIntervalDbApi= 30000
