--- a/plugin/debug_key_management/CMakeLists.txt
+++ b/plugin/debug_key_management/CMakeLists.txt
@@ -1,2 +1,2 @@
 MYSQL_ADD_PLUGIN(DEBUG_KEY_MANAGEMENT debug_key_management_plugin.cc
-                 MODULE_ONLY)
+                 MODULE_ONLY COMPONENT Test)
