--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -147,7 +147,7 @@ SET(CONFIGURE_LINE "Built using CMake")
 
 # Also required for mysqlbug, autoconf only supports --version so for now we
 # just explicitly require GNU
-IF(CMAKE_COMPILER_IS_GNUCC)
+IF(CMAKE_COMPILER_IS_GNUCC OR "${CMAKE_C_COMPILER_ID}" MATCHES "Clang")
   EXECUTE_PROCESS(
     COMMAND ${CMAKE_C_COMPILER} ${CMAKE_C_COMPILER_ARG1} --version
     COMMAND sed 1q
@@ -155,7 +155,7 @@ IF(CMAKE_COMPILER_IS_GNUCC)
 ELSE()
   SET(CC_VERSION "")
 ENDIF()
-IF(CMAKE_COMPILER_IS_GNUCXX)
+IF(CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
   EXECUTE_PROCESS(
     COMMAND ${CMAKE_CXX_COMPILER} ${CMAKE_CXX_COMPILER_ARG1} --version
     COMMAND sed 1q
