--- a/storage/mroonga/CMakeLists.txt
+++ b/storage/mroonga/CMakeLists.txt
@@ -303,7 +303,7 @@ else()
   if(WITH_DEBUG)
     set_property(TARGET mroonga APPEND PROPERTY
       COMPILE_DEFINITIONS "SAFE_MUTEX")
-    if(CMAKE_COMPILER_IS_GNUCXX)
+    if(CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
       set(MRN_C_COMPILE_FLAGS "${MRN_C_COMPILE_FLAGS} -g3 -O0")
       set(MRN_CXX_COMPILE_FLAGS "${MRN_CXX_COMPILE_FLAGS} -g3 -O0")
     endif()
@@ -330,7 +330,7 @@ else()
       COMPILE_DEFINITIONS "MY_PTHREAD_FASTMUTEX")
   endif()
 
-  if(CMAKE_COMPILER_IS_GNUCXX)
+  if(CMAKE_COMPILER_IS_GNUCXX OR "${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
     mrn_build_flag("-Wall")
     mrn_build_flag("-Wextra")
     mrn_build_flag("-Wno-unused-parameter")
