scripts: Do not prepend the prefix to absolute paths

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -222,15 +222,41 @@ IF(INSTALL_SYSCONFDIR)
 ELSE()
   SET(sysconfdir "/etc")
 ENDIF()
-SET(bindir ${prefix}/${INSTALL_BINDIR})
-SET(libexecdir ${prefix}/${INSTALL_SBINDIR})
-SET(scriptdir ${prefix}/${INSTALL_BINDIR})
-SET(datadir ${prefix}/${INSTALL_MYSQLSHAREDIR})
-SET(pkgdatadir ${prefix}/${INSTALL_MYSQLSHAREDIR})
+IF(IS_ABSOLUTE ${INSTALL_BINDIR})
+  SET(bindir ${INSTALL_BINDIR})
+  SET(scriptdir ${INSTALL_BINDIR})
+ELSE()
+  SET(bindir ${prefix}/${INSTALL_BINDIR})
+  SET(scriptdir ${prefix}/${INSTALL_BINDIR})
+ENDIF()
+IF(IS_ABSOLUTE ${INSTALL_SBINDIR})
+  SET(libexecdir ${INSTALL_SBINDIR})
+ELSE()
+  SET(libexecdir ${prefix}/${INSTALL_SBINDIR})
+ENDIF()
+IF(IS_ABSOLUTE ${INSTALL_MYSQLSHAREDIR})
+  SET(datadir ${INSTALL_MYSQLSHAREDIR})
+  SET(pkgdatadir ${INSTALL_MYSQLSHAREDIR})
+ELSE()
+  SET(datadir ${prefix}/${INSTALL_MYSQLSHAREDIR})
+  SET(pkgdatadir ${prefix}/${INSTALL_MYSQLSHAREDIR})
+ENDIF()
 SET(libsubdir  ${INSTALL_LIBDIR})
-SET(pkgincludedir ${prefix}/${INSTALL_INCLUDEDIR})
-SET(pkglibdir ${prefix}/${INSTALL_LIBDIR})
-SET(pkgplugindir ${prefix}/${INSTALL_PLUGINDIR})
+IF(IS_ABSOLUTE ${INSTALL_INCLUDEDIR})
+  SET(pkgincludedir ${INSTALL_INCLUDEDIR})
+ELSE()
+  SET(pkgincludedir ${prefix}/${INSTALL_INCLUDEDIR})
+ENDIF()
+IF(IS_ABSOLUTE ${INSTALL_LIBDIR})
+  SET(pkglibdir ${INSTALL_LIBDIR})
+ELSE()
+  SET(pkglibdir ${prefix}/${INSTALL_LIBDIR})
+ENDIF()
+IF(IS_ABSOLUTE ${INSTALL_PLUGINDIR})
+  SET(pkgplugindir ${INSTALL_PLUGINDIR})
+ELSE()
+  SET(pkgplugindir ${prefix}/${INSTALL_PLUGINDIR})
+ENDIF()
 SET(localstatedir ${MYSQL_DATADIR})
 
 SET(RPATH_OPTION "")
