mroonga doesn't work in embedded anymore
specify RECOMPILE_FOR_EMBEDDED and disable tests in suite.pm

--- a/storage/mroonga/CMakeLists.txt
+++ b/storage/mroonga/CMakeLists.txt
@@ -319,6 +319,7 @@ if(MRN_BUNDLED)
   mysql_add_plugin(mroonga
     ${MRN_ALL_SOURCES}
     STORAGE_ENGINE MODULE_ONLY
+    RECOMPILE_FOR_EMBEDDED
     LINK_LIBRARIES ${MRN_LIBRARIES})
 else()
   add_library(mroonga MODULE ${MRN_ALL_SOURCES})
