--- a/.gitattributes
+++ b/.gitattributes
@@ -4,15 +4,16 @@
 # Explicitly declare text files you want to always be normalized and converted
 # to native line endings on checkout.
 *.c text
+*.ic text
 *.cc text
 *.cpp text
 *.h text
 *.test text
 
-# Declare files that will always have LF line endings on checkout.
-*.result text eol=lf
-storage/connect/mysql-test/connect/std_data/*.txt text eol=lf
-storage/connect/mysql-test/connect/std_data/*.dat text eol=lf
+# These files should be checked out as is
+*.result -text -whitespace
+storage/connect/mysql-test/connect/std_data/*.txt -text
+storage/connect/mysql-test/connect/std_data/*.dat -text
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
