Make BIN table files more flexible with new column format. In particular enable to set length and endian setting. This should solve all problems on IBM390s machines.   modified:   storage/connect/ha_connect.cc   modified:   storage/connect/tabfix.cpp   modified:   storage/connect/tabfix.h
Make DBF tables to be usable in big-endian machines (test version)
  modified:   storage/connect/filamdbf.cpp

Ignore git files on storage/connect
  modified:   .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,7 @@ sql/mysqld
 sql/sql_builtin.cc
 sql/sql_yacc.cc
 sql/sql_yacc.h
+storage/connect/.*
 storage/heap/hp_test1
 storage/heap/hp_test2
 storage/maria/aria_chk
