MSVS 2013 & WiX 3.9 have been supported.
Signed-off-by: Andrey Kuznetsov <Andrey_Kuznetsov@epam.com>

--- a/win/packaging/ca/CMakeLists.txt
+++ b/win/packaging/ca/CMakeLists.txt
@@ -36,6 +36,9 @@ ELSEIF(MSVC_VERSION EQUAL 1500)
 ELSEIF(MSVC_VERSION EQUAL 1600 OR MSVC_VERSION EQUAL 1700 )
   SET(WIX35_MSVC_SUFFIX "_2010")
   SET(WIX36_MSVC_SUFFIX "VS2010")
+ELSEIF(MSVC_VERSION EQUAL 1800  OR MSVC_VERSION EQUAL 1900 )
+  SET(WIX35_MSVC_SUFFIX "_2013")
+  SET(WIX36_MSVC_SUFFIX "VS2013")
 ELSE()
   # When next VS is out, add the correct version here
   MESSAGE(FATAL_ERROR "Unknown VS version")
@@ -47,7 +50,8 @@ FIND_LIBRARY(WIX_WCAUTIL_LIBRARY
   wcautil
   PATHS 
   ${WIX_DIR}/../SDK/lib 
-  ${WIX_DIR}/../SDK/${WIX36_MSVC_SUFFIX}/lib/${WIX36_ARCH_SUFFIX})
+  ${WIX_DIR}/../SDK/${WIX36_MSVC_SUFFIX}/lib/${WIX36_ARCH_SUFFIX}
+  )
 
 FIND_LIBRARY(WIX_DUTIL_LIBRARY 
   NAMES dutil${WIX_ARCH_SUFFIX}  dutil${WIX35_MSVC_SUFFIX}${WIX_ARCH_SUFFIX}
