--- a/.gitignore
+++ b/.gitignore
@@ -245,6 +245,11 @@ storage/mroonga/vendor/groonga/src/suggest/groonga-suggest-create-dataset
 *.ko
 *.obj
 *.elf
+*.exp
+*.manifest
+*.dep
+*.idb
+*.res
 
 # Precompiled Headers
 *.gch
@@ -293,7 +298,6 @@ storage/mroonga/vendor/groonga/src/suggest/groonga-suggest-create-dataset
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
-[Rr]eleaseWithDebInfo/
 x64/
 x86/
 build/
