MDEV-8128 cmake fails to detect boost libraries

--- a/storage/oqgraph/CMakeLists.txt
+++ b/storage/oqgraph/CMakeLists.txt
@@ -24,6 +24,7 @@ IF(MSVC)
 #  ENDIF()
 ELSE()
 # See if that works. On old gcc it'll fail because of -fno-rtti
+SET(CMAKE_REQUIRED_INCLUDES "${Boost_INCLUDE_DIRS}")
 CHECK_CXX_SOURCE_COMPILES(
 "
 #define BOOST_NO_RTTI 1
