created mariadb-service-convert for systemd migration. added --simulate option to scripts/mysqld_safe.sh

--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -339,6 +339,8 @@ ELSE()
     mysqldumpslow
     mysqld_multi
     mysqld_safe
+    mariadb-service-convert
+    mariadb-socket-convert
   )
   FOREACH(file ${BIN_SCRIPTS})
     IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${file}.sh)
