Fix loosing result lines when all of this is true:   The table type is MYSQL   The query where clause includes an indexed column   The where clause contains < or <= operator on this column Change version date   modified:   storage/connect/ha_connect.cc   modified:   storage/connect/tabmysql.cpp
Add visual studio 2013 files to ignore
  modified:   .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -281,6 +281,10 @@ storage/mroonga/mysql-test/mroonga/storage/r/variable_version.result
 *.vcproj.*
 *.vcproj.*.*
 *.vcproj.*.*.*
+*.vcxproj
+*.vcxproj.*
+*.vcxproj.*.*
+*.vcxproj.*.*.*
 
 # Build results
 [Dd]ebug/
