--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -300,6 +300,8 @@ ELSE()
     mysqld_multi
     mysqld_safe
     ${WSREP_BINARIES}
+    mariadb-service-convert
+    mariadb-socket-convert
   )
   FOREACH(file ${BIN_SCRIPTS})
     IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${file}.sh)
