Fix and Enhance remote indexing: - Apply to ODBC tables as well as MYSQL tables - Fix and enhance the CheckCond routine   Make ReadKey and MakeKeyWhere handle all conditions   modified:   storage/connect/.gitattributes   modified:   storage/connect/.gitignore   modified:   storage/connect/connect.cc   modified:   storage/connect/connect.h   modified:   storage/connect/ha_connect.cc   modified:   storage/connect/ha_connect.h   modified:   storage/connect/mycat.cc   modified:   storage/connect/tabmysql.cpp   modified:   storage/connect/tabmysql.h   modified:   storage/connect/tabodbc.cpp   modified:   storage/connect/tabodbc.h   modified:   storage/connect/xobject.cpp   modified:   storage/connect/xobject.h   modified:   storage/connect/xtable.h
Add some new tests:
  storage/connect/mysql-test/connect/r/endian.result
  storage/connect/mysql-test/connect/r/mysql_index.result
  storage/connect/mysql-test/connect/t/endian.test
  storage/connect/mysql-test/connect/t/mysql_index.test

--- a/storage/connect/.gitignore
+++ b/storage/connect/.gitignore
@@ -82,6 +82,10 @@ RelWithDebInfo/
 *.vcproj.*
 *.vcproj.*.*
 *.vcproj.*.*.*
+*.vcxproj
+*.vcxproj.*
+*.vcxproj.*.*
+*.vcxproj.*.*.*
 
 # Build results
 [Dd]ebug/
