--- a/storage/connect/.gitattributes
+++ b/storage/connect/.gitattributes
@@ -11,8 +11,10 @@
 
 # Declare files that will always have LF line endings on checkout.
 *.result text eol=lf
-mysql-test/connect/std_data/*.txt text eol=lf
-mysql-test/connect/std_data/*.dat text eol=lf
+
+# Denote files that should not be modified.
+mysql-test/connect/std_data/*.txt binary
+mysql-test/connect/std_data/*.dat binary
 
 # Denote all files that are truly binary and should not be modified.
 *.png binary
