--- a/debian/control
+++ b/debian/control
@@ -4,12 +4,26 @@ Priority: optional
 Maintainer: MariaDB Developers <maria-developers@lists.launchpad.net>
 XSBC-Original-Maintainer: Maria Developers <maria-developers@lists.launchpad.net>
 Uploaders: MariaDB Developers <maria-developers@lists.launchpad.net>
-Build-Depends: procps | hurd, debhelper, libncurses5-dev (>= 5.0-6),
-               perl (>= 5.6.0), libwrap0-dev (>= 7.6-8.3),
-               zlib1g-dev (>= 1:1.1.3-5), ${LIBREADLINE_DEV}, libssl-dev,
-               libpam0g-dev, psmisc, po-debconf, chrpath,
-               dpatch, gawk, bison, lsb-release, hardening-wrapper,
-               cmake (>= 2.7), libaio-dev, ${MAYBE_LIBCRACK}
+Build-Depends: bison,
+               chrpath,
+               cmake (>= 2.7),
+               debhelper,
+               dpatch,
+               gawk,
+               hardening-wrapper,
+               libaio-dev,
+               libncurses5-dev (>= 5.0-6),
+               libpam0g-dev,
+               libssl-dev,
+               libwrap0-dev (>= 7.6-8.3),
+               lsb-release,
+               perl (>= 5.6.0),
+               po-debconf,
+               procps | hurd,
+               psmisc,
+               zlib1g-dev (>= 1:1.1.3-5),
+               ${LIBREADLINE_DEV},
+               ${MAYBE_LIBCRACK}
                libjemalloc-dev (>= 3.0.0)
 Standards-Version: 3.8.2
 Homepage: http://mariadb.org/
@@ -19,12 +33,17 @@ Vcs-Bzr: bzr://lp:maria
 Package: libmariadbclient18
 Section: libs
 Architecture: any
-Depends: mariadb-common, libmysqlclient18 (= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}
-Conflicts: mariadb-server-10.0 (<< 10.0.5), mariadb-galera-server-10.0 (<< 10.0.5),
-           mariadb-server-5.5 (<< 5.5.33), mariadb-galera-server-5.5 (<< 5.5.33),
+Depends: libmysqlclient18 (= ${source:Version}),
+         mariadb-common,
+         ${misc:Depends},
+         ${shlibs:Depends}
+Conflicts: mariadb-galera-server-10.0 (<< 10.0.5),
+           mariadb-galera-server-5.5 (<< 5.5.33),
+           mariadb-server-10.0 (<< 10.0.5),
            mariadb-server-5.1,
            mariadb-server-5.2,
-           mariadb-server-5.3
+           mariadb-server-5.3,
+           mariadb-server-5.5 (<< 5.5.33)
 Description: MariaDB database client library
  MariaDB is a fast, stable and true multi-user, multi-threaded SQL database
  server. SQL (Structured Query Language) is the most popular database query
@@ -66,9 +85,18 @@ Description: MariaDB embedded database development files
 Package: libmariadbclient-dev
 Architecture: any
 Section: libdevel
-Depends: libmariadbclient18 (>= ${source:Version}), zlib1g-dev, , ${shlibs:Depends}, ${misc:Depends}
+Depends: libmariadbclient18 (>= ${source:Version}),
+         zlib1g-dev,
+         ${misc:Depends},
+         ${shlibs:Depends}
 Replaces: libmariadbclient16-dev, libmysqlclient16-dev
-Conflicts: libmysqlclient-dev, libmariadbclient16-dev, libmysqlclient14-dev, libmysqlclient12-dev, libmysqlclient10-dev, libmysqlclient15-dev, libmysqlclient16-dev
+Conflicts: libmariadbclient16-dev,
+           libmysqlclient-dev,
+           libmysqlclient10-dev,
+           libmysqlclient12-dev,
+           libmysqlclient14-dev,
+           libmysqlclient15-dev,
+           libmysqlclient16-dev
 Provides: libmysqlclient-dev
 Description: MariaDB database development files
  MariaDB is a fast, stable and true multi-user, multi-threaded SQL database
@@ -81,7 +109,7 @@ Description: MariaDB database development files
 Package: mysql-common
 Section: database
 Architecture: all
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}
 Description: MariaDB database common files (e.g. /etc/mysql/my.cnf)
  MariaDB is a fast, stable and true multi-user, multi-threaded SQL database
  server. SQL (Structured Query Language) is the most popular database query
@@ -94,7 +122,7 @@ Description: MariaDB database common files (e.g. /etc/mysql/my.cnf)
 Package: mariadb-common
 Section: database
 Architecture: all
-Depends: mysql-common, ${shlibs:Depends}, ${misc:Depends}
+Depends: mysql-common, ${misc:Depends}, ${shlibs:Depends}
 Description: MariaDB database common files (e.g. /etc/mysql/conf.d/mariadb.cnf)
  MariaDB is a fast, stable and true multi-user, multi-threaded SQL database
  server. SQL (Structured Query Language) is the most popular database query
@@ -106,22 +134,39 @@ Description: MariaDB database common files (e.g. /etc/mysql/conf.d/mariadb.cnf)
 
 Package: mariadb-client-core-10.1
 Architecture: any
-Depends: mariadb-common, libmariadbclient18 (>= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}
+Depends: libmariadbclient18 (>= ${source:Version}),
+         mariadb-common,
+         ${misc:Depends},
+         ${shlibs:Depends}
 Provides: mysql-client-core, mysql-client-core-5.1, mysql-client-core-5.5
-Conflicts: mysql-client (<< 5.0.51), mysql-client-5.0,
-    mysql-client-5.1 (<< ${source:Version}), mysql-client-5.5 (<< ${source:Version}),
-    mysql-client-core-5.1, mysql-client-core-5.5,
-    mariadb-client-5.1, mariadb-client-core-5.1,
-    mariadb-client-5.2, mariadb-client-core-5.2,
-    mariadb-client-5.3, mariadb-client-core-5.3,
-    mariadb-client-5.5, mariadb-client-core-5.5
-Replaces: mysql-client (<< 5.0.51), mysql-client-5.0,
-    mysql-client-5.1, mysql-client-5.5,
-    mysql-client-core-5.1, mysql-client-core-5.5,
-    mariadb-client-5.1, mariadb-client-core-5.1,
-    mariadb-client-5.2, mariadb-client-core-5.2,
-    mariadb-client-5.3, mariadb-client-core-5.3,
-    mariadb-client-5.5, mariadb-client-core-5.5
+Conflicts: mariadb-client-5.1,
+           mariadb-client-5.2,
+           mariadb-client-5.3,
+           mariadb-client-5.5,
+           mariadb-client-core-5.1,
+           mariadb-client-core-5.2,
+           mariadb-client-core-5.3,
+           mariadb-client-core-5.5,
+           mysql-client (<< 5.0.51),
+           mysql-client-5.0,
+           mysql-client-5.1 (<< ${source:Version}),
+           mysql-client-5.5 (<< ${source:Version}),
+           mysql-client-core-5.1,
+           mysql-client-core-5.5
+Replaces: mariadb-client-5.1,
+          mariadb-client-5.2,
+          mariadb-client-5.3,
+          mariadb-client-5.5,
+          mariadb-client-core-5.1,
+          mariadb-client-core-5.2,
+          mariadb-client-core-5.3,
+          mariadb-client-core-5.5,
+          mysql-client (<< 5.0.51),
+          mysql-client-5.0,
+          mysql-client-5.1,
+          mysql-client-5.5,
+          mysql-client-core-5.1,
+          mysql-client-core-5.5
 Description: MariaDB database core client binaries
  MariaDB is a fast, stable and true multi-user, multi-threaded SQL database
  server. SQL (Structured Query Language) is the most popular database query
@@ -132,25 +177,39 @@ Description: MariaDB database core client binaries
 
 Package: mariadb-client-10.1
 Architecture: any
-Depends: debianutils (>=1.6), libdbi-perl, libdbd-mysql-perl (>= 1.2202),
-    mariadb-common, libmariadbclient18 (>= ${source:Version}),
-    mariadb-client-core-10.1 (>= ${source:Version}), ${perl:Depends},
-    ${shlibs:Depends}, ${misc:Depends}
+Depends: debianutils (>=1.6),
+         libdbd-mysql-perl (>= 1.2202),
+         libdbi-perl,
+         libmariadbclient18 (>= ${source:Version}),
+         mariadb-client-core-10.1 (>= ${source:Version}),
+         mariadb-common,
+         ${misc:Depends},
+         ${perl:Depends},
+         ${shlibs:Depends}
 Suggests: libterm-readkey-perl
-Provides: virtual-mysql-client, mysql-client,
-    mysql-client-4.1, mysql-client-5.1, mysql-client-5.5
-Conflicts: mysql-client (<< 5.0.51), mysql-client-5.0, mysql-client-5.1,
-    mariadb-client (<< ${source:Version}),
-    mariadb-client-5.1,
-    mariadb-client-5.2,
-    mariadb-client-5.3,
-    mariadb-client-5.5, mysql-client-5.5
-Replaces: mysql-client (<< 5.0.51), mysql-client-5.0, mysql-client-5.1,
-    mariadb-client (<< ${source:Version}),
-    mariadb-client-5.1,
-    mariadb-client-5.2,
-    mariadb-client-5.3,
-    mariadb-client-5.5, mysql-client-5.5
+Provides: mysql-client,
+          mysql-client-4.1,
+          mysql-client-5.1,
+          mysql-client-5.5,
+          virtual-mysql-client
+Conflicts: mariadb-client (<< ${source:Version}),
+           mariadb-client-5.1,
+           mariadb-client-5.2,
+           mariadb-client-5.3,
+           mariadb-client-5.5,
+           mysql-client (<< 5.0.51),
+           mysql-client-5.0,
+           mysql-client-5.1,
+           mysql-client-5.5
+Replaces: mariadb-client (<< ${source:Version}),
+          mariadb-client-5.1,
+          mariadb-client-5.2,
+          mariadb-client-5.3,
+          mariadb-client-5.5,
+          mysql-client (<< 5.0.51),
+          mysql-client-5.0,
+          mysql-client-5.1,
+          mysql-client-5.5
 Description: MariaDB database client binaries
  MariaDB is a fast, stable and true multi-user, multi-threaded SQL database
  server. SQL (Structured Query Language) is the most popular database query
@@ -162,18 +221,26 @@ Description: MariaDB database client binaries
 
 Package: mariadb-server-core-10.1
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libmariadbclient18 (>= ${binary:Version})
+Depends: libmariadbclient18 (>= ${binary:Version}),
+         ${misc:Depends},
+         ${shlibs:Depends}
 Provides: mysql-server-core, mysql-server-core-5.1, mysql-server-core-5.5
-Conflicts: mysql-server-5.0, mysql-server-core-5.0,
-    mariadb-server-core-5.1, mysql-server-core-5.1,
-    mariadb-server-core-5.2,
-    mariadb-server-core-5.3,
-    mariadb-server-core-5.5, mysql-server-core-5.5
-Replaces: mysql-server-5.0, mysql-server-core-5.0,
-    mariadb-server-core-5.1, mysql-server-core-5.1,
-    mariadb-server-core-5.2,
-    mariadb-server-core-5.3,
-    mariadb-server-core-5.5, mysql-server-core-5.5
+Conflicts: mariadb-server-core-5.1,
+           mariadb-server-core-5.2,
+           mariadb-server-core-5.3,
+           mariadb-server-core-5.5,
+           mysql-server-5.0,
+           mysql-server-core-5.0,
+           mysql-server-core-5.1,
+           mysql-server-core-5.5
+Replaces: mariadb-server-core-5.1,
+          mariadb-server-core-5.2,
+          mariadb-server-core-5.3,
+          mariadb-server-core-5.5,
+          mysql-server-5.0,
+          mysql-server-core-5.0,
+          mysql-server-core-5.1,
+          mysql-server-core-5.5
 Description: MariaDB database core server files
  MariaDB is a fast, stable and true multi-user, multi-threaded SQL database
  server. SQL (Structured Query Language) is the most popular database query
@@ -185,13 +252,19 @@ Description: MariaDB database core server files
 Package: mariadb-test-10.1
 Section: database
 Architecture: any
-Depends: mariadb-server-10.1 (= ${source:Version}), mariadb-client-10.1 (= ${source:Version})
+Depends: mariadb-client-10.1 (= ${source:Version}),
+         mariadb-server-10.1 (= ${source:Version})
 Suggests: patch
-Conflicts: mariadb-test (<< ${source:Version}),
-    mariadb-test-5.1, mariadb-test-5.2, mariadb-test-5.3,
-    mariadb-server-5.5 (<< 5.5.33), mariadb-galera-server-5.5 (<< 5.5.33)
+Conflicts: mariadb-galera-server-5.5 (<< 5.5.33),
+           mariadb-server-5.5 (<< 5.5.33),
+           mariadb-test (<< ${source:Version}),
+           mariadb-test-5.1,
+           mariadb-test-5.2,
+           mariadb-test-5.3
 Replaces: mariadb-test (<< ${source:Version}),
-    mariadb-test-5.1, mariadb-test-5.2, mariadb-test-5.3
+          mariadb-test-5.1,
+          mariadb-test-5.2,
+          mariadb-test-5.3
 Description: MariaDB database regression test suite
  MariaDB is a fast, stable and true multi-user, multi-threaded SQL database
  server. SQL (Structured Query Language) is the most popular database query
@@ -202,30 +275,55 @@ Description: MariaDB database regression test suite
 
 Package: mariadb-server-10.1
 Architecture: any
-Suggests: tinyca, mailx, mariadb-test, netcat-openbsd, socat
+Suggests: mailx, mariadb-test, netcat-openbsd, socat, tinyca
 Recommends: libhtml-template-perl
 Pre-Depends: mariadb-common, adduser (>= 3.40), debconf
-Depends: mariadb-client-10.1 (>= ${source:Version}), libdbi-perl,
-         perl (>= 5.6), ${shlibs:Depends}, ${misc:Depends}, psmisc, passwd,
-         lsb-base (>= 3.0-10), mariadb-server-core-10.1 (>= ${binary:Version}),
-         galera-3 (>=25.3), rsync, lsof, grep, gawk, iproute,
-         coreutils, bsdutils, findutils, tar
+Depends: bsdutils,
+         coreutils,
+         findutils,
+         galera-3 (>=25.3),
+         gawk,
+         grep,
+         iproute,
+         libdbi-perl,
+         lsb-base (>= 3.0-10),
+         lsof,
+         mariadb-client-10.1 (>= ${source:Version}),
+         mariadb-server-core-10.1 (>= ${binary:Version}),
+         passwd,
+         perl (>= 5.6),
+         psmisc,
+         rsync,
+         tar,
+         ${misc:Depends},
+         ${shlibs:Depends}
 Provides: mariadb-server, mysql-server, virtual-mysql-server
-Conflicts: mariadb-server (<< ${source:Version}), mysql-server (<< ${source:Version}),
-    mysql-server-4.1, mysql-server-5.0,
-    mariadb-server-5.1, mysql-server-5.1,
-    mariadb-server-5.2,
-    mariadb-server-5.3,
-    mariadb-server-5.5, mysql-server-5.5,
-    mariadb-tokudb-engine-5.5, mariadb-tokudb-engine-10.0
-Replaces: mariadb-server (<< ${source:Version}), mysql-server (<< ${source:Version}),
-    mysql-server-4.1, mysql-server-5.0,
-    mariadb-server-5.1, mysql-server-5.1,
-    mariadb-server-5.2,
-    mariadb-server-5.3,
-    mariadb-server-5.5, mysql-server-5.5,
-    libmariadbclient16 (<< 5.3.4), libmariadbclient-dev (<< 5.5.0),
-    mariadb-tokudb-engine-5.5, mariadb-tokudb-engine-10.0
+Conflicts: mariadb-server (<< ${source:Version}),
+           mariadb-server-5.1,
+           mariadb-server-5.2,
+           mariadb-server-5.3,
+           mariadb-server-5.5,
+           mariadb-tokudb-engine-10.0,
+           mariadb-tokudb-engine-5.5,
+           mysql-server (<< ${source:Version}),
+           mysql-server-4.1,
+           mysql-server-5.0,
+           mysql-server-5.1,
+           mysql-server-5.5
+Replaces: libmariadbclient-dev (<< 5.5.0),
+          libmariadbclient16 (<< 5.3.4),
+          mariadb-server (<< ${source:Version}),
+          mariadb-server-5.1,
+          mariadb-server-5.2,
+          mariadb-server-5.3,
+          mariadb-server-5.5,
+          mariadb-tokudb-engine-10.0,
+          mariadb-tokudb-engine-5.5,
+          mysql-server (<< ${source:Version}),
+          mysql-server-4.1,
+          mysql-server-5.0,
+          mysql-server-5.1,
+          mysql-server-5.5
 Description: MariaDB database server binaries
  MariaDB is a fast, stable and true multi-user, multi-threaded SQL database
  server. SQL (Structured Query Language) is the most popular database query
@@ -272,8 +370,8 @@ Description: MariaDB database regression test suite (metapackage depending on th
 Package: mariadb-connect-engine-10.1
 Section: database
 Architecture: any
-Depends: mariadb-server-10.1, unixODBC, libxml2
-Build-Depends: mariadb-server-10.1, unixODBC-dev, libxml2-dev
+Depends: libxml2, mariadb-server-10.1, unixODBC
+Build-Depends: libxml2-dev, mariadb-server-10.1, unixODBC-dev
 Description: Connect storage engine for MariaDB
  Connect engine supports a number of file formats (dbf, xml, txt, bin, etc),
  connections to ODBC tables and remote MySQL tables, as well as a number of
@@ -282,7 +380,7 @@ Description: Connect storage engine for MariaDB
 Package: mariadb-oqgraph-engine-10.1
 Section: database
 Architecture: any
-Depends: mariadb-server-10.1, libjudydebian1
+Depends: libjudydebian1, mariadb-server-10.1
 Description: Oqgraph storage engine for MariaDB
  The OQGRAPH engine is a computation engine plugin for handling hierarchies
  (trees) and graphs (friend-of-a-friend, etc) cleanly through standard SQL.
@@ -290,7 +388,7 @@ Description: Oqgraph storage engine for MariaDB
 Package: mariadb-cracklib-password-check-10.1
 Section: database
 Architecture: any
-Depends: mariadb-server-10.1, libcrack2 (>= 2.9.0)
+Depends: libcrack2 (>= 2.9.0), mariadb-server-10.1
 Description: CrackLib Password Validation Plugin for MariaDB
  This password validation plugin uses cracklib to allow only
  sufficiently secure (as defined by cracklib) user passwords in MariaDB.
