--- a/debian/control
+++ b/debian/control
@@ -22,7 +22,7 @@ Build-Depends: bison,
                procps | hurd,
                psmisc,
                zlib1g-dev (>= 1:1.1.3-5),
-               ${LIBREADLINE_DEV},
+               libreadline-gplv2-dev,
                ${MAYBE_LIBCRACK}
                libjemalloc-dev (>= 3.0.0)
 Standards-Version: 3.8.2
